force-app/main/default/objects/sked__Async_Job__c/fields/sked__Param__c.field-meta.xml
<CustomField>
    <fullName>sked__Param__c</fullName>
    <label>Param</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>