force-app/main/default/objects/sked__Async_Job__c/fields/sked__Status__c.field-meta.xml
<CustomField>
    <fullName>sked__Status__c</fullName>
    <defaultValue>&#39;Pending&#39;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>