force-app/main/default/objects/sked__Async_Job__c/fields/sked_API_Response__c.field-meta.xml
<CustomField>
    <fullName>sked_API_Response__c</fullName>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>