force-app/main/default/objects/sked__Async_Job__c/fields/sked_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Run_Id__c</fullName>
    <label>Run Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>