force-app/main/default/objects/sked__Async_Job__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Status__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Param__c</columns>
    <columns>sked__Message__c</columns>
    <columns>sked_Run_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>